[metadata]
name = do_code
version = 0.0.1
author = Lance Hughes
author_email = thisislance98@gmail.com
description = Generate Python code with the Do() function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thisislance98/do_code
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True